# alxLang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  test  test.alx  test.ir  test.nasm  todo.md
benchmarks/: lots_of_variables.alx
docs/: grammar.md  whitepaper.tex
examples/: main.alx
meta/: lint-commit.sh
src/: CMakeLists.txt  Compiler.cpp  Compiler.h  main.cpp
src/AST/: Ast.cpp  Ast.h  CMakeLists.txt  PrintNode.cpp  Types.h
src/Codegen/: CMakeLists.txt  Generator.cpp  Generator.h
src/Codegen/InstructionSelection/: CMakeLists.txt  InstructionSelection.cpp  InstructionSelection.h  InstructionSelector.h  MachineInstruction.cpp  MachineInstruction.h  PrintInstructionSelection.cpp  Target.h
src/Codegen/InstructionSelection/X86/: X86ISel.cpp  X86ISel.h  X86Info.h  X86InstructionMatcher.h  X86Instructions.h
src/Codegen/x86_64_linux/: BinaryExpression.cpp  BlockGenerator.cpp  BlockGenerator.h  CMakeLists.txt  Generator.cpp  Generator.h  IfStatement.cpp  LoopGenerator.cpp  ProgramGenerator.cpp  ProgramGenerator.h  Structs.cpp  UnaryExpression.cpp  VariableDeclaration.cpp
src/IR/: Attributes.h  CMakeLists.txt  Instructions.h  Ir.cpp  Ir.h  PrintNode.cpp  Types.h  Values.h  Variables.h
src/IR/Lowering/: BinaryExpression.cpp  Conditionals.cpp  Function.cpp  ReturnStatement.cpp  UnaryExpression.cpp  Variables.cpp
src/IR/Lowering/InstructionSelection/: InstructionSelector.cpp
src/IR/Lowering/InstructionSelection/Targets/: X86.h
src/Parser/: CMakeLists.txt  ParseBinaryExpression.cpp  ParseClass.cpp  ParseConditionalStatement.cpp  ParseFunction.cpp  ParseLiteral.cpp  ParseMemberExpression.cpp  ParseReturn.cpp  ParseStatement.cpp  ParseUnaryExpression.cpp  ParseVariable.cpp  Parser.cpp  Parser.h
src/Tokeniser/: CMakeLists.txt  Tokeniser.cpp  Tokeniser.h
src/Utils/: CMakeLists.txt  File.h  Flags.h  Types.h  Utils.h
src/libs/: CMakeLists.txt  Colours.cpp  Colours.h  Error.h  ErrorHandler.h  PatternMatcher.h  Println.cpp  Println.h  Utils.h  argparse.hpp
tests/: Arithmetic.cpp  CMakeLists.txt  EmptyFile.cpp
tests/Basic/: Basic.cpp  CMakeLists.txt
tests/IR/: CMakeLists.txt  IRTests.cpp
tests/IntConversions/: Arithmetic.cpp  CMakeLists.txt
